# ansible-role-pgbouncer

./: .ansible-lint  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
defaults/: main.yml
docs/prs/: pr_012_migrate_to_uv.md  pr_013_tls_support.md
handlers/: main.yml
meta/: main.yml
molecule/default/: README.md  converge.yml  molecule.yml  prepare.yml  test-requirements.txt
molecule/default/tests/: test_defatuls.py  test_default.py  test_defaults.py
molecule/tls-client/: converge.yml  molecule.yml  prepare.yml
molecule/tls-client/tests/: test_tls_client.py
molecule/tls-full/: converge.yml  molecule.yml  prepare.yml
molecule/tls-full/tests/: test_tls_full.py
tasks/: dependencies.yml  include-vars.yml  main.yml  pgbouncer.yml
templates/: etc_logrotate.d_pgbouncer.j2  pgbouncer.ini.j2  pgbouncer_hba.conf.j2  tmpfiles.d_pgbouncer.conf.j2
vars/: Debian.yml  RedHat.yml
